--- a/weather_app/views/index.hbs
+++ b/weather_app/views/index.hbs
@@ -4,11 +4,52 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- Latest compiled and minified CSS -->
+     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
 <body>
     <p>"hello weather app</p>
     <p>{{weather_data.temperature}}</p>
     <p>{{weather_data.city}}</p>
+    <p>{{weather_data.icon}}</p>
+    <div class="container-fluid">
+        <div class="row" style="height:200px;background-color:greenyellow">
+            <h3 class="text-center">Wather app</h3>
+        </div>
+        <br>
+        <div>
+            <div class="row">
+                <div class="col-sm-0 col-md-4"></div>
+                <div class="col-sm-12 col-md-4">
+              <form class="form-inline">
+                   <div class="form-group mx-sm-3 mb-2">
+                   <label for="inputPassword2" class="sr-only">Password</label>
+                   <input type="text" class="form-control" id="city" placeholder="enter city name ">
+                   </div>
+                    <button type="submit" id="submit" class="btn btn-primary mb-2">submit</button>
+               </form>
+                </div>
+
+                <div class="row">
+                    <div class="col-sm-12 col-md-12">
+                        <div class="card" style="width: 18rem;">
+                          <img class="card-img-top" src="http://openweathermap.org/img/w/{{ weather.icon}}.png" alt="Card image cap">
+                          <div class="card-body">
+                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-0 col-md-4"></div>
+            </div>
+        </div>
+
+    </div>
+    
 </body>
+
 </html>
