--- a/weather_app/views/index.hbs
+++ b/weather_app/views/index.hbs
@@ -10,44 +10,109 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <title>Document</title>
+    <style>
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.flip-card {
+  background-color: transparent;
+  width: 300px;
+  height: 300px;
+  perspective: 1000px;
+}
+
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+}
+
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+}
+
+.flip-card-front {
+  background-color: #bbb;
+  color: black;
+  z-index: 2;
+}
+
+.flip-card-back {
+  background-color: #2980b9;
+  color: white;
+  transform: rotateY(180deg);
+  z-index: 1;
+}
+</style>
+    <style>
+    .row{
+        border:1px solid red;
+    }
+    .col-d-4{
+        border:1px solid rgb(72, 255, 0);
+    }
+    </style>
 </head>
 <body>
+    <!---
     <p>"hello weather app</p>
     <p>{{weather_data.temperature}}</p>
     <p>{{weather_data.city}}</p>
-    <p>{{weather_data.icon}}</p>
-    <div class="container-fluid">
-        <div class="row" style="height:200px;background-color:greenyellow">
-            <h3 class="text-center">Wather app</h3>
-        </div>
-        <br>
-        <div>
-            <div class="row">
+    <p>{{weather_data.icon}}</p>  
+    --> 
+    <h3 class="text-center">Weather app</h3><br>
+    
+
+       <div class="container-fluid">
+              <div class="row">
                 <div class="col-sm-0 col-md-4"></div>
                 <div class="col-sm-12 col-md-4">
-              <form class="form-inline">
+                  <form class="form-inline">
                    <div class="form-group mx-sm-3 mb-2">
                    <label for="inputPassword2" class="sr-only">Password</label>
                    <input type="text" class="form-control" id="city" placeholder="enter city name ">
                    </div>
                     <button type="submit" id="submit" class="btn btn-primary mb-2">submit</button>
-               </form>
+                   </form>
+                   <br>
+                   <div class="row p-1 " style="">
+     
                 </div>
-
-                <div class="row">
-                    <div class="col-sm-12 col-md-12">
-                        <div class="card" style="width: 18rem;">
-                          <img class="card-img-top" src="http://openweathermap.org/img/w/{{ weather.icon}}.png" alt="Card image cap">
-                          <div class="card-body">
-                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                          </div>
-                        </div>
-                    </div>
                 </div>
                 <div class="col-sm-0 col-md-4"></div>
             </div>
-        </div>
 
+        <!--rough-->
+  <br><br>
+        <div class="row">
+            <div class="col-sm-12 col-md-4"></div>
+            <div class="col-sm-12 col-md-4 " style="border:1px solid blue">
+                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                   Nesciunt id harum et dolores asperiores 
+                   reprehenderit error sapiente quis, 
+                   tenetur ducimus maiores tempora saepe accusantium nihil vitae optio explicabo. Sunt, rerum!
+                <div class="row p-1 " style="">
+                    <div class="col-sm-12 col-md-6" style="border:1px solid black">inside row inner div1</div>
+                    <div class="col-sm-12 col-md-6" style="border:1px solid black;">inside row inner div2</div>
+                </div>
+            </div>
+            <div class="col-sm-12 col-md-4"></div>
+        </div>
+            <br><br><br>
+            src="http://openweathermap.org/img/w/{{ weather_data.icon}}.png
+            
     </div>
     
 </body>
