--- a/weather_app/views/template.html
+++ b/weather_app/views/template.html
@@ -38,6 +38,7 @@
                         <br>
                        <p class="center " style="margin-top: 10px;font-weight:bolder">LOS ANGELES</p>
                        <p class="center " style="margin-top:-10px;font-weight:bolder"> SOUTH AMERICA</p>
+                       <p>last checked __minutes ago</p>
                     </div>
                  </div>
                 <div class="row">
